<resources>
    <string name="app_name">CargoLite</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="products">Products</string>
    <string name="scanner">Barcode Scanner</string>
    <string name="stock">Stock Management</string>
    <string name="visualisation">Visualisation</string>
    <string name="shipment">Shipment</string>
    <string name="app_desc">Your Warehouse Assistant</string>
    <string name="logo">Logo</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="LoginButton">LOGIN</string>
    <string name="retypePassword">retype password</string>
    <string name="RegisterButton">Register</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone number</string>
    <string name="add_product">Add new product</string>
    <string name="hint_productname">Product name</string>
    <string name="hint_productID">Product ID</string>
    <string name="hint_productlocation">Shelf level, number etc</string>
    <string name="hint_unitprice">Unit Price (RM xxx.xx)</string>
    <string name="hint_productQuantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="oldPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="position">Position</string>
    <string name="edit_profile">Edit profile</string>
    <string name="error_value_required">Value required</string>
    <string name="logout">Log Out</string>
    <string name="fieldname_price">Unit Price (RM):</string>
    <string name="fieldname_location">Product Location:</string>
    <string name="fieldname_qty">Quantity:</string>
    <string name="dialogLogout">Log Out</string>
    <string name="messageLogout">Are you sure?</string>
    <string name="dialogDelete">WARNING: Delete product</string>
    <string name="messageDelete">Are you sure? This action is irreversible.</string>
    <string name="stockIn">Stock In</string>
    <string name="stockOut">Stock Out</string>
    <string name="noStock">Out Of Stock</string>
    <string name="shipmentHistory">Shipment History</string>
    <string name="editPassword">Edit Password</string>
    <string name="update">Update</string>
    <string name="stockInError">This is a stock in scanner.</string>
    <string name="stockOutError">This is a stock out scanner.</string>
    <string name="invalidQR">Invalid QR code</string>
    <string name="addProductTitle">Add Product</string>
    <string name="close">Close</string>
    <string name="fieldname_id">Product ID:</string>
    <string name="fieldname_name">Product Name:</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="price">Price (RM):</string>
    <string name="location">Location:</string>
    <string name="quantity">Quantity:</string>
    <string name="add">Add</string>
    <string name="stockInRecords">STOCK IN RECORDS</string>
    <string name="stockOutRecords">STOCK OUT RECORDS</string>
    <string name="edit_product">Edit Product</string>
    <string name="shipmentId">Shipment Id:</string>
    <string name="title_activity_analytics">Analytics</string>
    <string name="title_activity_notification">Notification</string>
    <string name="ok">Ok</string>
    <string name="time">Time :</string>
    <string name="date">Date : </string>
    <string name="stock_value">Stock value (RM):</string>
    <string name="product_details">Product Details</string>
    <string name="searchBar">Search here by</string>
    <string name="sort">Sort By...</string>
    <string-array name="searchBy">
        <item>ID</item>
        <item>Name</item>
        <item>Location</item>
    </string-array>
</resources>