<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/productDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <TextView
        android:id="@+id/detailsID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:hint="@string/hint_productID"
        android:inputType="none"
        android:text="@string/fieldname_id"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/detailsName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:hint="@string/hint_productname"
        android:inputType="none"
        android:text="@string/fieldname_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/detailsID"
        app:layout_constraintTop_toBottomOf="@+id/editTextID" />

    <TextView
        android:id="@+id/detailsPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:hint="@string/hint_unitprice"
        android:inputType="none"
        android:text="@string/fieldname_price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/detailsName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/detailsQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:hint="@string/hint_productQuantity"
        android:inputType="none"
        android:text="@string/fieldname_qty"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/detailsLocation"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocation" />

    <TextView
        android:id="@+id/editTextLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:textColor="@color/darkbrown"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailsLocation"
        app:layout_constraintTop_toBottomOf="@+id/detailsLocation" />

    <TextView
        android:id="@+id/editTextPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:textColor="@color/darkbrown"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailsPrice"
        app:layout_constraintTop_toBottomOf="@+id/detailsPrice" />

    <TextView
        android:id="@+id/detailsLocation"
        android:layout_width="152dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:hint="@string/hint_productlocation"
        android:inputType="none"
        android:text="@string/fieldname_location"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/detailsPrice"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />

    <TextView
        android:id="@+id/editTextQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:textColor="@color/darkbrown"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailsQuantity"
        app:layout_constraintTop_toBottomOf="@+id/detailsQuantity" />

    <TextView
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:textColor="@color/darkbrown"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailsName"
        app:layout_constraintTop_toBottomOf="@+id/detailsName" />

    <TextView
        android:id="@+id/editTextID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:textColor="@color/darkbrown"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detailsID"
        app:layout_constraintTop_toBottomOf="@+id/detailsID" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif"
        android:text="@string/close"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>