<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/dialogIDEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_productID"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/dialogNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_productname"
        android:inputType="text" />

    <EditText
        android:id="@+id/dialogPriceEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_unitprice"
        android:inputType="number|text|numberDecimal" />

    <EditText
        android:id="@+id/dialogLocationEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_productlocation"
        android:inputType="text" />

    <EditText
        android:id="@+id/dialogQuantityEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_productQuantity"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/dialogCancelBtn"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/dialogAddBtn"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>